// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds a default session from a file 1`] = `
{
  "assemblies": [
    {
      "name": "testAssembly",
      "sequence": {
        "adapter": {
          "twoBitLocation": {
            "locationType": "UriLocation",
            "uri": "test.2bit",
          },
          "type": "testSeqAdapter",
        },
        "trackId": "",
        "type": "testSequenceTrack",
      },
    },
  ],
  "configuration": {},
  "connections": [],
  "defaultSession": {
    "name": "test new session",
    "views": [
      {
        "id": "823WX",
        "tracks": [
          {
            "configuration": "simple",
            "type": "AlignmentsTrack",
          },
        ],
        "type": "LinearGenomeView",
      },
    ],
  },
  "tracks": [],
}
`;

exports[`deletes a default session 1`] = `
{
  "assemblies": [
    {
      "name": "testAssembly",
      "sequence": {
        "adapter": {
          "twoBitLocation": {
            "locationType": "UriLocation",
            "uri": "test.2bit",
          },
          "type": "testSeqAdapter",
        },
        "trackId": "",
        "type": "testSequenceTrack",
      },
    },
  ],
  "configuration": {},
  "connections": [],
  "tracks": [],
}
`;

exports[`fails when default session is not readable 1`] = `"Error: Error: ENOENT: no such file or directory, open '{}'"`;

exports[`fails when file does not exist 1`] = `"Error: Error: ENOTDIR: not a directory, open '/home/cdiesh/src/jbrowse-components/products/jbrowse-cli/test/data/sampleDefaultSession.json/nonexist.json'"`;

exports[`fails when file is does not have a default session to read 1`] = `"Error: Unexpected end of JSON input while parsing near ''"`;

exports[`fails when no necessary default session information is provided 1`] = `"Error: Please provide a --session file"`;
